<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activities.NewReminder">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_reminder"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.26">


        <EditText
            android:id="@+id/et_Title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/edit_text_round_corner"
            android:hint="@string/title"
            android:inputType="text"
            android:paddingLeft="12dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_Notes"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_below="@+id/et_Title"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="6dp"
            android:background="@drawable/edit_text_round_corner"
            android:gravity="start"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:paddingLeft="12dp"
            android:paddingTop="6dp"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_Notes"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/et_date"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/et_Title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_round_corner"
                android:hint="@string/date"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/calender_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/date_layout"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_time"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_below="@+id/et_Title"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/edit_text_round_corner"
                android:hint="@string/time"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/time"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/time_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_layout"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/alarm_on"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/circle_strokes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/alarm"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/create_alarm_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/alarm_layout"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/create_alarm">

            <TextView
                android:id="@+id/text_new_cat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Create"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </RelativeLayout>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/ad_view"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">


        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>